# pdf-table-parsing

./: camelot-decode.py  pyproject.toml  tabula-decode.py
